--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,10 @@ main {
   font-size: 40px;
   margin-right: 10px;
 }
-
+.weather-app-icon {
+  width: 88px;
+  height: 88px;
+}
 .current-temperature-value {
   font-size: 80px;
   font-weight: bold;
