fixed icon bugs(style)

--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ main {
 
 .current-temperature {
   font-size: 48px;
+  display: flex;
 }
 
 .current-weather {
@@ -81,9 +82,8 @@ main {
 }
 
 .current-temperature-unit {
+  margin-top: 6px;
   font-size: 28px;
-  position: relative;
-  top: -38px;
 }
 
 footer {
